# asciicker-rust-port

./: .gitignore  AGENTS.md  CLAUDE.md  MASTER_ROADMAP.md  ORIGINALGAMEgame_map_y8.a3d  README.md
.planning/: HANDOFF-PHASES-8-13.md  PROJECT.md  REQUIREMENTS.md  RISK-ASSESSMENT.md  ROADMAP.md  STATE.md
asciicker-rust/: Cargo.toml
asciicker-rust/src/: lib.rs  main.rs
asciicker-rust/src/components/: camera.rs  character.rs  mod.rs  position.rs  sprite.rs  terrain.rs
asciicker-rust/src/rendering/: buffer.rs  mod.rs  pipeline.rs  rasterize.rs
asciicker-rust/src/terrain/: mod.rs  quadtree.rs
docs/: AGENT_PROTOCOL.md  ASSUMPTION_MASTER_CHECKLIST.md  CANONICAL_SPEC.md  DECISION_LOG.md  ENGINE_ARCHITECTURE.md  FAILURE_LOG.md  GAPS_ANALYSIS_SUMMARY.md  IMPLEMENTATION_BUG_FIX_PLAN.md  INDEX.md  MASTER_INDEX.md  MASTER_ROADMAP.md  RE-AUDIT-MASTER.md  RESEARCH_CHECKPOINT.md  RISK_REGISTER.md  ROADMAP_STATE.md  alexharri_ascii_renderer_technology.md  audit-assumptions-verified.md  audit-phase1-2-granular.md  audit-phase3-4-granular.md  audit-phase3-world.md  audit-phase4-game-logic.md  audit-reaudit-critical-rendering.md  audit-reaudit-critical.md  audit-reaudit-high-rendering.md  audit-reaudit-high-visual.md  audit-reaudit-terrain.md  audit-unknown-HEIGHT_SCALE.md  audit-unknown-a3d-format.md  audit-unknown-animation-timing.md  audit-unknown-audio-details.md  audit-unknown-diag-bit.md  (+34 more)
engine-port/: .gitignore  Cargo.toml  TESTING_FRAMEWORK.md  build.rs  justfile  package-lock.json  package.json
engine-port/.cargo/: config.toml
engine-port/.claude/agents/: base-browser-story.md  menu-agent.md  water-surface-agent.md
engine-port/.claude/commands/: test-e2e.md  test-parallel.md  test-smoke.md
engine-port/.claude/homunculus/: observations.jsonl
engine-port/.claude/skills/browser-testing/: SKILL.md
engine-port/assets/meshes/: sac_and_math_color.akm  torus.akm
engine-port/benches/: physics_bench.rs
engine-port/scripts/: compare_replay_dirs.py  visual_compare.py
engine-port/scripts/testing/: e2e.mjs  parallel.mjs  run_dev_and_test.sh  serve_fixture.mjs  smoke.mjs  watchdog.mjs
engine-port/scripts/testing/fixtures/site/: index.html
engine-port/scripts/testing/lib/: browser_skill.mjs  cli.mjs  fixture_server.mjs  png_diff.mjs  visual_trail.mjs
engine-port/scripts/testing/stories/: menu_story.mjs  smoke_story.mjs  water_surface_story.mjs
engine-port/src/: lib.rs  main.rs  system_sets.rs
engine-port/src/asset_loader/: a3d_terrain.rs  a3d_world.rs  akm_mesh.rs  bevy_loaders.rs  constants.rs  error.rs  mod.rs  xp_sprite.rs
engine-port/src/audio/: mixer.rs  mod.rs
engine-port/src/character/: animation.rs  equipment.rs  input.rs  mod.rs  sprite_query.rs  state_machine.rs
engine-port/src/core/: coords.rs  mod.rs
engine-port/src/game/: menu.rs  mod.rs  spatial_grid.rs  state.rs  weather.rs
engine-port/src/network/: client.rs  mod.rs  protocol.rs  server.rs
engine-port/src/output/: ascii_cell_grid.rs  capture.rs  gpu_plugin.rs  gpu_types.rs  mod.rs  replay.rs  shader.wgsl  test_pattern.rs
engine-port/src/physics/: collision.rs  constants.rs  forces.rs  geometry.rs  mod.rs  soup.rs
engine-port/src/render/: assembly.rs  camera.rs  config.rs  debug_cells.rs  font.rs  material.rs  math.rs  mesh_shader.rs  mod.rs  pipeline.rs  quantize.rs  rasterizer.rs  resolve.rs  resolve_bridge.rs  sample_buffer.rs  shape_vector.rs  sprite_blit.rs  terrain_shader.rs  types.rs  water.rs  workbench.rs
engine-port/src/terrain/: mod.rs  patch_runtime.rs  quadtree.rs  shadow.rs
engine-port/src/world/: bsp.rs  instance.rs  mod.rs
engine-port/tests/: a3d_terrain_parser.rs  a3d_world_parser.rs  akm_mesh_parser.rs  asset_integration.rs  bevy_asset_loading.rs  ecs_character_integration.rs  golden_pipeline.rs  network_integration.rs  plugin_ordering.rs  resource_flow.rs  xp_parser.rs
engine-port/tests/golden/akm/: Cube.akm
engine-port/tests/visual-baselines/menu/: manifest.json
engine-port/tests/visual-baselines/smoke/: manifest.json
engine-port/tests/visual-baselines/water/: manifest.json
(+353 files in other folders)
