[package]
name = "asciicker-engine"
version = "0.1.0"
edition = "2024"
description = "Asciicker game engine port from C++ to Rust using Bevy"

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "2d_api",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_shader",
    "default_app",
    "default_platform",
] }
thiserror = "2.0"
anyhow = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
