[package]
name = "asciicker-engine"
version = "0.1.0"
edition = "2024"
description = "Asciicker game engine port from C++ to Rust using Bevy"

[features]
# Enable for fast iterative development: `cargo run --features dev`
# Enables Bevy dynamic linking (~10x faster incremental link times on macOS/Linux).
# NEVER use in release builds or CI. The resulting binary requires the Bevy .dylib at runtime.
dev = ["bevy/dynamic_linking"]
# Debug tooling (ADD.2 fix): enable runtime inspector UI
inspector = ["dep:bevy-inspector-egui"]
# Schedule dump: dump system schedule graph to DOT file on startup
schedule_dump = ["dep:bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "2d_api",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_shader",
    "default_app",
    "default_platform",
] }
thiserror = "2.0"
anyhow = "1.0"
flate2 = "1.0"
bytemuck = { version = "1", features = ["derive"] }
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_mod_debugdump = { version = "0.15.0", optional = true }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
