[package]
name = "asciicker-engine"
version = "0.1.0"
edition = "2024"
description = "Asciicker game engine port from C++ to Rust using Bevy"
build = "build.rs"

[features]
# Enable for fast iterative development: `cargo run --features dev`
# Enables Bevy dynamic linking (~10x faster incremental link times on macOS/Linux).
# NEVER use in release builds or CI. The resulting binary requires the Bevy .dylib at runtime.
dev = ["bevy/dynamic_linking"]
# Enable Phase 3 test pattern (overwritten by pipeline in Phase 5)
test_pattern = []
# Debug tooling (ADD.2 fix): enable runtime inspector UI
inspector = ["dep:bevy-inspector-egui"]
# Schedule dump: dump system schedule graph to DOT file on startup
schedule_dump = ["dep:bevy_mod_debugdump"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "2d_api",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_shader",
    "default_app",
    "default_platform",
] }
thiserror = "2.0"
anyhow = "1.0"
flate2 = "1.0"
bytemuck = { version = "1", features = ["derive"] }
noise = "0.9"
kiddo = "5"
lru = "0.12"
bevy-inspector-egui = { version = "0.36.0", optional = true }
bevy_mod_debugdump = { version = "0.15.0", optional = true }
bevy_kira_audio = "0.25"
bevy_replicon = "0.39"
bevy_replicon_renet2 = { version = "0.14", features = ["memory_transport"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }
bincode = "=1.3.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "physics_bench"
harness = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
